[package]
name = "spectool"
version = "0.0.0"
edition = "2021"

[dependencies]
bon = "3.3.2"
clap = { version = "4.5.26", features = ["derive"] }
clap-verbosity-flag = { version = "3.0.2", features = ["tracing"] }
git2 = "0.20.0"
miette = { version = "7.4.0", features = ["fancy"] }
regex = "1.11.1"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
tempfile = "3.15.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
url = "2.5.4"
